# atem-mini-emulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: capture.exe.md  capture.md  tech.md  tools.md
src/: AtemProtocol.h  AtemServer.cpp  AtemServer.h  AtemState.cpp  AtemState.h  Compositor.cpp  Compositor.h  InputSource.cpp  InputSource.h  MacroEngine.cpp  MacroEngine.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  SourceButton.cpp  SourceButton.h  main.cpp
src/vcam/: vcam.cpp  vcam.def  vcam_shared.h
tools/: CMakeLists.txt  capture-bmd.cpp
